# atom-converter-test

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: initial-plan.md  original-prompt.md
example/: atom_example.csv
src/converter/: cli.py  core.py  csv_writer.py  defaults.py  llm_extract.py  pdf_extract.py  prompts.py  schema.py  validator.py
tests/: test_against_example.py
