[project]
name = "finding-aid-converter"
version = "0.1.0"
description = "Convert legacy archival finding-aid PDFs into AtoM-ready CSVs via the Claude API."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "pdfplumber>=0.11.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
finding-aid-convert = "converter.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
